tests/fails/multistmt_oneline_child.lt
var p = print
if true p(1) p(2)
